--- a/eda/eda.ipynb
+++ b/eda/eda.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Файл с данными был взят с платформы kaggle:  \n",
-    "**www.kaggle.com/datasets/ahsan81/hotel-reservations-classification-dataset** \n",
+    "Файл с данными был взят с платформы kaggle: [Ссылка на датасет](www.kaggle.com/datasets/ahsan81/hotel-reservations-classification-dataset) \n",
     "\n",
     "Датасет содержит различные атрибуты деталей бронирования клиентов. Подробное описание полей приведено ниже.\n",
     "\n",
@@ -732,8 +731,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Каждый признак имеет разумное количество категорий\n",
-    "- Период, на который осуществлялось бронирование - 01.2017 - 12.2018"
+    "Каждый признак имеет разумное количество категорий"
    ]
   },
   {
@@ -1222,7 +1220,7 @@
    "source": [
     "- Более трети номеров забронированы на двух взрослых, второе по популярности количество взрослых - 1;\n",
     "- Около 92% процентов бронируют номера без детей;\n",
-    "- Менее 2% бронируют проживание, захватывающее более одних выходных\n",
+    "- Менее 2% бронируют проживание, захватывающее более одних выходных;\n",
     "- Распределение количество будних дней имеет положительную ассиметрию, с модой равной 2."
    ]
   },
@@ -1283,8 +1281,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Популярные месяцы для бронирования - 8,9,10, что странно, ведь этот вериод не является высокосезонным\n",
-    "- Бронирования на 2018 год преобладают"
+    "- Популярные месяцы для бронирования - 8,9,10, что странно, ведь этот вериод не является высокосезонным;\n",
+    "- Бронирования на 2018 год преобладают."
    ]
   },
   {
@@ -1336,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -74696,7 +74694,7 @@
     "             color='room_type_reserved',\n",
     "             color_discrete_sequence=px.colors.qualitative.Set2)\n",
     "fig.update_layout(width=1000, height=600)\n",
-    "fig.write_image('avg_price_per_room_by_room_type_boxprol.png')\n",
+    "fig.write_image('avg_price_per_room_by_room_type_boxplot.png')\n",
     "fig.show()"
    ]
   },
@@ -74704,10 +74702,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Тип 7 имеет наибольший разброс цен, при этом наибольшую медианную цену\n",
-    "- Тип 1 и тип 2 имеют схожий диапазон цен и невысокий разброс\n",
-    "- Тип 4 и тип 5 также имеют схожий диапазон цен и невысокий разброс\n",
-    "- У типа 1 присутствует сильно выраженный выброс"
+    "- Тип 7 имеет наибольший разброс цен, при этом наибольшую медианную цену;\n",
+    "- Тип 1 и тип 2 имеют схожий диапазон цен и невысокий разброс;\n",
+    "- Тип 4 и тип 5 также имеют схожий диапазон цен и невысокий разброс;\n",
+    "- У типа 1 присутствует сильно выраженный выброс."
    ]
   },
   {
@@ -74767,11 +74765,11 @@
    "metadata": {},
    "source": [
     "### Выводы:\n",
-    "1) На этапе очистки данных датасет был проверен на наличие дубликатов, отсутствие указанных гостей, отсутствие указаннных ночей проживания, неверную дату прибытия. Найденные строки были удалены.\n",
-    "2) Были созданы два новых признака: \n",
+    "1) На этапе очистки данных датасет проверен на наличие дубликатов, отсутствие указанных гостей, отсутствие указаннных ночей проживания, неверную дату прибытия. Найденные строки были удалены.\n",
+    "2) Cозданы два новых признака: \n",
     "    - является ли день прибытия выходным? (категориальный бинарный признак)\n",
     "    - отклонение цены за номер от медианной цены (числовой признак)\n",
-    "3) Были построены следующие графики:\n",
+    "3) Построены следующие графики:\n",
     "    - гистограмма для lead_time\n",
     "    - ящик с усами для lead_time в зависимости от booking_status\n",
     "    - barplot для признаков no_of_adults, no_of_children, no_of_weekend_nights, no_of_week_nights, arrival_date, arrival_month, arrival_year\n",
@@ -74781,6 +74779,11 @@
     "    Каждый график прокомментирован.\n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
