Change link (add https)

--- a/eda/eda.ipynb
+++ b/eda/eda.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Файл с данными был взят с платформы kaggle: [Ссылка на датасет](www.kaggle.com/datasets/ahsan81/hotel-reservations-classification-dataset) \n",
+    "Файл с данными был взят с платформы kaggle: [Ссылка на датасет](https://www.kaggle.com/datasets/ahsan81/hotel-reservations-classification-dataset) \n",
     "\n",
     "Датасет содержит различные атрибуты деталей бронирования клиентов. Подробное описание полей приведено ниже.\n",
     "\n",
